Improved pipeline, added logging and versioning

--- a/Pipeline/Converter.ipynb
+++ b/Pipeline/Converter.ipynb
@@ -2,28 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converter.ipynb\n",
-      "Deployer.ipynb\n",
-      "Simulator.ipynb\n",
-      "Trainer.ipynb\n",
-      "Watcher.ipynb\n"
+      "\n",
+      "Found: Converter.ipynb\n",
+      "[NbConvertApp] Converting notebook Converter.ipynb to script\n",
+      "[NbConvertApp] Writing 277 bytes to Converter.py\n",
+      "\n",
+      "Found: Deployer.ipynb\n",
+      "[NbConvertApp] Converting notebook Deployer.ipynb to script\n",
+      "[NbConvertApp] Writing 453 bytes to Deployer.py\n",
+      "\n",
+      "Found: Simulator.ipynb\n",
+      "[NbConvertApp] Converting notebook Simulator.ipynb to script\n",
+      "[NbConvertApp] Writing 1745 bytes to Simulator.py\n",
+      "\n",
+      "Found: Trainer.ipynb\n",
+      "[NbConvertApp] Converting notebook Trainer.ipynb to script\n",
+      "[NbConvertApp] Writing 1352 bytes to Trainer.py\n",
+      "\n",
+      "Found: Watcher.ipynb\n",
+      "[NbConvertApp] Converting notebook Watcher.ipynb to script\n",
+      "[NbConvertApp] Writing 2252 bytes to Watcher.py\n",
+      "\n",
+      "Found: Production/Application.ipynb\n",
+      "[NbConvertApp] Converting notebook Production/Application.ipynb to script\n",
+      "[NbConvertApp] Writing 215 bytes to Production/Application.py\n"
      ]
     }
    ],
    "source": [
     "import os\n",
     "import glob\n",
+    "from pathlib import Path\n",
     "\n",
-    "for file in glob.glob(\"*.ipynb\"):\n",
-    "    print(os.path.basename(file)\n",
-    "    #nbconvert --toscript file\n"
+    "for file in (Path('.').glob(\"**/*.ipynb\")):\n",
+    "    if(file.name.find(\"checkpoint\") == -1):\n",
+    "        print(\"\\nFound: {0}\".format(file))\n",
+    "        !jupyter nbconvert --to script $file\n"
    ]
   },
   {
