--- a/Pipeline/Deployer.ipynb
+++ b/Pipeline/Deployer.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-03-14 15:45:08.990317\n",
-      "Loading model..\n",
-      "Saving model in version control..\n",
-      "Saving model in production..\n",
-      "Model deployed\n"
+      "2018-03-15 13:43:21.542997\n",
+      "Loading pipeline..\n",
+      "Saving pipeline in version control..\n",
+      "Saving pipeline in production..\n",
+      "pipeline deployed\n"
      ]
     }
    ],
@@ -25,15 +25,15 @@
     "\n",
     "version = str(datetime.datetime.now())\n",
     "print(version)\n",
-    "print(\"Loading model..\")\n",
-    "model = joblib.load(\"model.pkl\")\n",
+    "print(\"Loading pipeline..\")\n",
+    "model = joblib.load(\"pipeline.pkl\")\n",
     "\n",
-    "print(\"Saving model in version control..\")\n",
-    "joblib.dump(model, \"./versions/model_\"+ version +\".pkl\")\n",
+    "print(\"Saving pipeline in version control..\")\n",
+    "joblib.dump(model, \"./versions/Pipeline\"+ version +\".pkl\")\n",
     "     \n",
-    "print(\"Saving model in production..\")\n",
-    "joblib.dump(model, \"Production/model.pkl\")\n",
-    "print(\"Model deployed\")"
+    "print(\"Saving pipeline in production..\")\n",
+    "joblib.dump(model, \"Production/pipeline.pkl\")\n",
+    "print(\"pipeline deployed\")"
    ]
   },
   {
