--- a/Pipeline/Production/Application.ipynb
+++ b/Pipeline/Production/Application.ipynb
@@ -2,35 +2,81 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading model\n",
-      "Model successfully loaded\n"
+      "Starting application..\n",
+      "Loading pipeline..\n",
+      "pipeline successfully loaded\n",
+      "Running predictions\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 0, 9, ..., 3, 9, 2])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.externals import joblib\n",
     "\n",
-    "print(\"Loading model\")\n",
-    "model = joblib.load(\"model.pkl\")\n",
-    "print(\"Model successfully loaded\")"
+    "print(\"Starting application..\")\n",
+    "print(\"Loading pipeline..\")\n",
+    "pipeline = joblib.load(\"pipeline.pkl\")\n",
+    "print(\"pipeline successfully loaded\")\n",
+    "\n",
+    "import pandas as pd\n",
+    "test_df = pd.read_csv(\"../../Test.csv\")\n",
+    "\n",
+    "X = test_df.iloc[:,:]\n",
+    "\n",
+    "print(\"Running predictions\")\n",
+    "predictions = pipeline.predict(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "#predictions = model.predict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predictions saved as Results.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "length = len(predictions)\n",
+    "ImageIds = []\n",
+    "for i in range(length):\n",
+    "    ImageIds.append(i+1)\n",
+    "    \n",
+    "data_to_submit = pd.DataFrame({'ImageId':ImageIds,\n",
+    "                               'Label':predictions})\n",
+    "data_to_submit.to_csv(\"Results.csv\", index = False)\n",
+    "print(\"Predictions saved as Results.csv\")"
    ]
   },
   {
