--- a/Pipeline/Simulator.ipynb
+++ b/Pipeline/Simulator.ipynb
@@ -1,398 +1,176 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This simulator has 2 functions:\n",
+    "1. It splits the training and test data used by the programs.\n",
+    "2. It executes the pipeline and runs the production application once."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 1. Split training and test data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook simulator.ipynb to script\n",
-      "[NbConvertApp] Writing 743 bytes to simulator.py\n",
-      "Train size is 840\n",
-      "Test size is 8400\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "#Enter data\n",
-    "count = 42000\n",
-    "trainsize = 0.02 #As percentage. Example: 25% should be entered as 0.25\n",
-    "testsize = 0.2 #As percentage.\n",
+    "def splitData(Trainsize, Testsize):\n",
+    "    #Enter data\n",
+    "    count = 42000\n",
+    "    trainsize = Trainsize #As percentage. Example: 25% should be entered as 0.25\n",
+    "    testsize = Testsize #As percentage.\n",
     "\n",
-    "trainsize = int(count*trainsize) \n",
-    "testsize = int(count*testsize)\n",
-    "print(\"Train size is {0}\".format(trainsize))\n",
-    "print(\"Test size is {0}\".format(testsize))\n",
+    "    trainsize = int(count*trainsize) \n",
+    "    testsize = int(count*testsize)\n",
+    "    print(\"Train size is {0}\".format(trainsize))\n",
+    "    print(\"Test size is {0}\".format(testsize))\n",
     "\n",
-    "df = pd.read_csv(\"../Train.csv\")\n",
+    "    df = pd.read_csv(\"../Train.csv\")\n",
     "\n",
-    "test_df = df.iloc[count-testsize:,:]\n",
-    "train_df = df.iloc[:trainsize,:]\n"
+    "    \n",
+    "    \n",
+    "    \n",
+    "    test_df = df.iloc[count-testsize:,:]\n",
+    "    train_df = df.iloc[:trainsize,:]\n",
+    "\n",
+    "    train_df.to_csv(\"data.csv\", index = False)\n",
+    "    test_df.to_csv(\"test_data.csv\", index = False)\n",
+    "    print(\"Data has been split and saved as data.csv and test_data.csv\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>label</th>\n",
-       "      <th>pixel0</th>\n",
-       "      <th>pixel1</th>\n",
-       "      <th>pixel2</th>\n",
-       "      <th>pixel3</th>\n",
-       "      <th>pixel4</th>\n",
-       "      <th>pixel5</th>\n",
-       "      <th>pixel6</th>\n",
-       "      <th>pixel7</th>\n",
-       "      <th>pixel8</th>\n",
-       "      <th>...</th>\n",
-       "      <th>pixel774</th>\n",
-       "      <th>pixel775</th>\n",
-       "      <th>pixel776</th>\n",
-       "      <th>pixel777</th>\n",
-       "      <th>pixel778</th>\n",
-       "      <th>pixel779</th>\n",
-       "      <th>pixel780</th>\n",
-       "      <th>pixel781</th>\n",
-       "      <th>pixel782</th>\n",
-       "      <th>pixel783</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>840.000000</td>\n",
-       "      <td>840.0</td>\n",
-       "      <td>840.0</td>\n",
-       "      <td>840.0</td>\n",
-       "      <td>840.0</td>\n",
-       "      <td>840.0</td>\n",
-       "      <td>840.0</td>\n",
-       "      <td>840.0</td>\n",
-       "      <td>840.0</td>\n",
-       "      <td>840.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>840.0</td>\n",
-       "      <td>840.0</td>\n",
-       "      <td>840.0</td>\n",
-       "      <td>840.0</td>\n",
-       "      <td>840.0</td>\n",
-       "      <td>840.0</td>\n",
-       "      <td>840.0</td>\n",
-       "      <td>840.0</td>\n",
-       "      <td>840.0</td>\n",
-       "      <td>840.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>4.315476</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>2.891234</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>7.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>9.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>8 rows × 785 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            label  pixel0  pixel1  pixel2  pixel3  pixel4  pixel5  pixel6  \\\n",
-       "count  840.000000   840.0   840.0   840.0   840.0   840.0   840.0   840.0   \n",
-       "mean     4.315476     0.0     0.0     0.0     0.0     0.0     0.0     0.0   \n",
-       "std      2.891234     0.0     0.0     0.0     0.0     0.0     0.0     0.0   \n",
-       "min      0.000000     0.0     0.0     0.0     0.0     0.0     0.0     0.0   \n",
-       "25%      2.000000     0.0     0.0     0.0     0.0     0.0     0.0     0.0   \n",
-       "50%      4.000000     0.0     0.0     0.0     0.0     0.0     0.0     0.0   \n",
-       "75%      7.000000     0.0     0.0     0.0     0.0     0.0     0.0     0.0   \n",
-       "max      9.000000     0.0     0.0     0.0     0.0     0.0     0.0     0.0   \n",
-       "\n",
-       "       pixel7  pixel8    ...     pixel774  pixel775  pixel776  pixel777  \\\n",
-       "count   840.0   840.0    ...        840.0     840.0     840.0     840.0   \n",
-       "mean      0.0     0.0    ...          0.0       0.0       0.0       0.0   \n",
-       "std       0.0     0.0    ...          0.0       0.0       0.0       0.0   \n",
-       "min       0.0     0.0    ...          0.0       0.0       0.0       0.0   \n",
-       "25%       0.0     0.0    ...          0.0       0.0       0.0       0.0   \n",
-       "50%       0.0     0.0    ...          0.0       0.0       0.0       0.0   \n",
-       "75%       0.0     0.0    ...          0.0       0.0       0.0       0.0   \n",
-       "max       0.0     0.0    ...          0.0       0.0       0.0       0.0   \n",
-       "\n",
-       "       pixel778  pixel779  pixel780  pixel781  pixel782  pixel783  \n",
-       "count     840.0     840.0     840.0     840.0     840.0     840.0  \n",
-       "mean        0.0       0.0       0.0       0.0       0.0       0.0  \n",
-       "std         0.0       0.0       0.0       0.0       0.0       0.0  \n",
-       "min         0.0       0.0       0.0       0.0       0.0       0.0  \n",
-       "25%         0.0       0.0       0.0       0.0       0.0       0.0  \n",
-       "50%         0.0       0.0       0.0       0.0       0.0       0.0  \n",
-       "75%         0.0       0.0       0.0       0.0       0.0       0.0  \n",
-       "max         0.0       0.0       0.0       0.0       0.0       0.0  \n",
-       "\n",
-       "[8 rows x 785 columns]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "train_df.describe()"
+    "Step 2. Execute pipeline and run the production application."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data has been split and saved as data.csv and test_data.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "train_df.to_csv(\"data.csv\", index = False)\n",
-    "test_df.to_csv(\"test_data.csv\", index = False)\n",
-    "print(\"Data has been split and saved as data.csv and test_data.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting pipeline\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "print(\"\\nStarting pipeline\")\n",
-    "os.system(\"python Trainer.py\")\n",
+    "def runPipeline():\n",
+    "    print(\"\\nStarting trainer\")\n",
+    "    os.system(\"python Trainer.py\")\n",
     "\n",
-    "print(\"\\nExecuting watcher\")\n",
-    "if(os.system(\"python Watcher.py\") == 0):\n",
-    "    print(\"\\nExecuting deployer\")\n",
-    "    if(os.system(\"python Deployer\") == 0):\n",
-    "        print(\"Deployment succesfull.\")\n",
-    "        print(\"Running application test\")\n",
+    "    print(\"\\nExecuting watcher\")\n",
+    "    if(os.system(\"python Watcher.py\") == 0):\n",
+    "        print(\"\\nExecuting deployer\")\n",
+    "        if(os.system(\"python Deployer.py\") == 0):\n",
+    "            print(\"Deployment succesfull.\")\n",
+    "            print(\"Running application test\")\n",
+    "            os.system(\"python ./Production/Application.py\")\n",
+    "        else:\n",
+    "            print(\"Deployment failed.\")\n",
     "    else:\n",
-    "        print(\"Deployment failed.\")\n",
-    "else:\n",
-    "    print(\"Model did not pass the test, aborting.\")"
+    "        print(\"Model did not pass the test, aborting.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train size is 42\n",
+      "Test size is 8400\n",
+      "Data has been split and saved as data.csv and test_data.csv\n",
+      "\n",
+      "Starting trainer\n",
+      "\n",
+      "Executing watcher\n",
+      "\n",
+      "Executing deployer\n",
+      "Deployment succesfull.\n",
+      "Running application test\n",
+      "Train size is 210\n",
+      "Test size is 8400\n",
+      "Data has been split and saved as data.csv and test_data.csv\n",
+      "\n",
+      "Starting trainer\n",
+      "\n",
+      "Executing watcher\n",
+      "\n",
+      "Executing deployer\n",
+      "Deployment succesfull.\n",
+      "Running application test\n",
+      "Train size is 378\n",
+      "Test size is 8400\n",
+      "Data has been split and saved as data.csv and test_data.csv\n",
+      "\n",
+      "Starting trainer\n",
+      "\n",
+      "Executing watcher\n",
+      "\n",
+      "Executing deployer\n",
+      "Deployment succesfull.\n",
+      "Running application test\n",
+      "Train size is 546\n",
+      "Test size is 8400\n",
+      "Data has been split and saved as data.csv and test_data.csv\n",
+      "\n",
+      "Starting trainer\n",
+      "\n",
+      "Executing watcher\n",
+      "\n",
+      "Executing deployer\n",
+      "Deployment succesfull.\n",
+      "Running application test\n",
+      "Train size is 714\n",
+      "Test size is 8400\n",
+      "Data has been split and saved as data.csv and test_data.csv\n",
+      "\n",
+      "Starting trainer\n",
+      "\n",
+      "Executing watcher\n",
+      "\n",
+      "Executing deployer\n",
+      "Deployment succesfull.\n",
+      "Running application test\n",
+      "Train size is 210\n",
+      "Test size is 8400\n",
+      "Data has been split and saved as data.csv and test_data.csv\n",
+      "\n",
+      "Starting trainer\n",
+      "\n",
+      "Executing watcher\n",
+      "Model did not pass the test, aborting.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def frange(start, stop, step):\n",
+    "    i = start\n",
+    "    while i <= stop:\n",
+    "        yield i\n",
+    "        i+=step\n",
+    "    \n",
+    "\n",
+    "for i in frange(0.001, 0.02, 0.004):\n",
+    "    splitData(i, 0.2)\n",
+    "    runPipeline()\n",
+    "    \n",
+    "#Run once more, the accuracy should decrease with the result that the model should not be deployed.\n",
+    "splitData(0.005, 0.2)\n",
+    "runPipeline()"
+   ]
   }
  ],
  "metadata": {
