--- a/Pipeline/Trainer.ipynb
+++ b/Pipeline/Trainer.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -16,21 +18,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we preprocess our data"
+    "By creating a pipeline we can run one line of code to pre-process our data and train our model.\n",
+    "Later on this pipeline will also enable us to only need 1 line of code to pre-process and make predictions on new data.\n",
+    "Hence the code will be a lot cleaner.\n",
+    "\n",
+    "Pipeline.steps can be called to view the all the components and parameters that make up the pipeline."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Starting model training..\n",
+      "--------------------------------------\n",
+      "\n",
+      "Finished training.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('minmaxscaler', MinMaxScaler(copy=True, feature_range=(0, 1))),\n",
+       " ('XgbClassifier',\n",
+       "  XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "         colsample_bytree=1, gamma=0, learning_rate=0.1, max_delta_step=0,\n",
+       "         max_depth=3, min_child_weight=1, missing=None, n_estimators=100,\n",
+       "         n_jobs=1, nthread=None, objective='multi:softprob', random_state=0,\n",
+       "         reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
+       "         silent=True, subsample=1))]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X = train_df.iloc[:,1:]\n",
     "y = train_df.iloc[:,0]\n",
     "\n",
+    "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "scaler = MinMaxScaler(feature_range=(0, 1), copy=True)\n",
-    "X = scaler.fit_transform(X)\n"
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "import xgboost as xgb\n",
+    "from xgboost import XGBClassifier\n",
+    "\n",
+    "pipeline = Pipeline(steps=[('minmaxscaler', MinMaxScaler(feature_range=(0, 1), copy=True)),\n",
+    "                            ('XgbClassifier', XGBClassifier(objective = 'multi:softmax'))\n",
+    "                           ])\n",
+    "print(\"\\n\\nStarting model training..\")\n",
+    "print(\"--------------------------------------\\n\")\n",
+    "pipeline = pipeline.fit(X, y)\n",
+    "print(\"Finished training.\")\n",
+    "pipeline.steps"
    ]
   },
   {
@@ -38,28 +85,6 @@
    "metadata": {},
    "source": [
     "Then we train our model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting model training..\n",
-      "Training finished\n"
-     ]
-    }
-   ],
-   "source": [
-    "import xgboost as xgb\n",
-    "print(\"Starting model training..\")\n",
-    "clf = xgb.XGBClassifier(objective = 'multi:softmax')\n",
-    "clf.fit(X, y)\n",
-    "print(\"Training finished\")"
    ]
   },
   {
@@ -71,22 +96,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model has been saved as model.pkl\n"
+      "Pipeline has been saved as pipeline.pkl\n"
      ]
     }
    ],
    "source": [
     "from sklearn.externals import joblib\n",
-    "joblib.dump(clf, \"model.pkl\")\n",
-    "print(\"Model has been saved as model.pkl\")"
+    "joblib.dump(pipeline, \"pipeline.pkl\")\n",
+    "print(\"Pipeline has been saved as pipeline.pkl\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
