--- a/Pipeline/Watcher.ipynb
+++ b/Pipeline/Watcher.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -10,8 +10,8 @@
      "output_type": "stream",
      "text": [
       "Starting evaluation\n",
-      "Loading model\n",
-      "Model loaded\n"
+      "Loading pipeline\n",
+      "pipeline loaded\n"
      ]
     }
    ],
@@ -19,9 +19,9 @@
     "from sklearn.externals import joblib\n",
     "\n",
     "print(\"Starting evaluation\")\n",
-    "print(\"Loading model\")\n",
-    "model = joblib.load(\"model.pkl\")\n",
-    "print(\"Model loaded\")"
+    "print(\"Loading pipeline\")\n",
+    "pipeline = joblib.load(\"pipeline.pkl\")\n",
+    "print(\"pipeline loaded\")"
    ]
   },
   {
@@ -33,26 +33,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "\n",
     "test_df = pd.read_csv(\"test_data.csv\")\n",
-    "\n",
     "X = test_df.iloc[:,1:]\n",
     "y = test_df.iloc[:,0]\n",
-    "#Temp step, this should be integrated in a seperate 'pre-processing' program\n",
-    "#Normalize test data\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "scaler = MinMaxScaler(feature_range=(0, 1), copy=True)\n",
-    "X = scaler.fit_transform(X)"
+    "\n",
+    "y_pred = pipeline.predict(X)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -79,14 +75,13 @@
     }
    ],
    "source": [
-    "y_pred = model.predict(X)\n",
-    "\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.metrics import accuracy_score\n",
     "cm = confusion_matrix(y, y_pred)\n",
     "accuracy = accuracy_score(y, y_pred)\n",
     "\n",
     "print(\"Test results\\n-------------------------------------------------------------\\n\")\n",
+    "results = {\"Accuracy\":accuracy, \"Confusion matrix\":cm.tolist()}\n",
     "print(\"Accuracy: {0}%\\n\".format(accuracy))\n",
     "print(\"Confusion matrix:\")\n",
     "print(cm)"
@@ -94,43 +89,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "foundResults = False\n",
+    "\n",
+    "from pathlib import Path\n",
+    "if Path('results.json').exists():\n",
+    "    with open('results.json', 'r') as f:\n",
+    "        previousResults = json.load(f)\n",
+    "    foundResults = True\n",
+    "else:\n",
+    "    print(\"Warning, did not find any previous results!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def compareResults(Results, PreviousResults):\n",
+    "    print(\"Comparing results\")\n",
+    "    if(Results['Accuracy'] >= PreviousResults['Accuracy']):\n",
+    "        print(\"\\nModel passed the test.\")\n",
+    "        return True\n",
+    "    else:\n",
+    "        print(\"Model did not pass the test.\")\n",
+    "        return False\n",
+    "    \n",
+    "def modelPassed():\n",
+    "    #Save the results as the current model\n",
+    "    with open('results.json', 'w') as f:\n",
+    "        json.dump(results, f, ensure_ascii=False, sort_keys=True, indent = 4)\n",
+    "    #Save the results in version control\n",
+    "    with open('./Versions/Pipeline_' + version +'_results.json', 'w') as f:\n",
+    "        json.dump(results, f, ensure_ascii=False, sort_keys=True, indent = 4)\n",
+    "\n",
+    "def modelFailed():  \n",
+    "    print(\"Saving results..\")\n",
+    "    with open('./Versions/Failed/Pipeline_' + version +'_results.json', 'w') as f:\n",
+    "        json.dump(results, f, ensure_ascii=False, sort_keys=True, indent = 4)\n",
+    "    print(\"Results saved.\")\n",
+    "    import sys\n",
+    "    sys.exit(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model did not pass the test.\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "1",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.6/site-packages/IPython/core/interactiveshell.py:2870: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+      "Deploying model without previous results.\n",
+      "\n",
+      "Model passed the test.\n"
      ]
     }
    ],
    "source": [
-    "if accuracy > 85:\n",
-    "    print(\"\\nModel passed the test.\")\n",
-    "    returnvalue = 0\n",
+    "import datetime\n",
+    "version = str(datetime.datetime.now())\n",
+    "\n",
+    "if foundResults:\n",
+    "    if compareResults(results, previousResults):\n",
+    "        modelPassed()\n",
+    "    else:\n",
+    "        modelFailed()\n",
     "else:\n",
-    "    print(\"Model did not pass the test.\")    \n",
-    "    returnvalue = 1\n",
-    "import sys\n",
-    "sys.exit(returnvalue)"
+    "    print(\"Deploying model without previous results.\")\n",
+    "    modelPassed()"
    ]
   },
   {
