Added partial functionality for automated Deep-learning deployment
Deep learning training and pipeline is functional, saving the model not yet.

--- a/Pipeline/Converter.ipynb
+++ b/Pipeline/Converter.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -20,19 +22,19 @@
       "\n",
       "Found: Simulator.ipynb\n",
       "[NbConvertApp] Converting notebook Simulator.ipynb to script\n",
-      "[NbConvertApp] Writing 1745 bytes to Simulator.py\n",
+      "[NbConvertApp] Writing 1975 bytes to Simulator.py\n",
       "\n",
       "Found: Trainer.ipynb\n",
       "[NbConvertApp] Converting notebook Trainer.ipynb to script\n",
-      "[NbConvertApp] Writing 1352 bytes to Trainer.py\n",
+      "[NbConvertApp] Writing 4758 bytes to Trainer.py\n",
       "\n",
       "Found: Watcher.ipynb\n",
       "[NbConvertApp] Converting notebook Watcher.ipynb to script\n",
-      "[NbConvertApp] Writing 2252 bytes to Watcher.py\n",
+      "[NbConvertApp] Writing 2304 bytes to Watcher.py\n",
       "\n",
       "Found: Production/Application.ipynb\n",
       "[NbConvertApp] Converting notebook Production/Application.ipynb to script\n",
-      "[NbConvertApp] Writing 215 bytes to Production/Application.py\n"
+      "[NbConvertApp] Writing 1321 bytes to Production/Application.py\n"
      ]
     }
    ],
@@ -46,6 +48,15 @@
     "        print(\"\\nFound: {0}\".format(file))\n",
     "        !jupyter nbconvert --to script $file\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
