--- a/Pipeline/Deployer.ipynb
+++ b/Pipeline/Deployer.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-03-15 13:43:21.542997\n",
+      "2018-03-19 10:26:29.946945\n",
       "Loading pipeline..\n",
       "Saving pipeline in version control..\n",
       "Saving pipeline in production..\n",
@@ -24,12 +24,15 @@
     "import datetime\n",
     "\n",
     "version = str(datetime.datetime.now())\n",
+    "\n",
+    "print(\"\\nDeployer started\")\n",
+    "print(\"--------------------------------------\\n\")\n",
     "print(version)\n",
     "print(\"Loading pipeline..\")\n",
     "model = joblib.load(\"pipeline.pkl\")\n",
     "\n",
     "print(\"Saving pipeline in version control..\")\n",
-    "joblib.dump(model, \"./versions/Pipeline\"+ version +\".pkl\")\n",
+    "joblib.dump(model, \"./versions/Pipeline_\"+ version +\".pkl\")\n",
     "     \n",
     "print(\"Saving pipeline in production..\")\n",
     "joblib.dump(model, \"Production/pipeline.pkl\")\n",
