--- a/Pipeline/Production/Application.ipynb
+++ b/Pipeline/Production/Application.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -12,35 +12,28 @@
       "Starting application..\n",
       "Loading pipeline..\n",
       "pipeline successfully loaded\n",
-      "Running predictions\n"
+      "Running predictions..\n",
+      "Predictions made.\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([2, 0, 9, ..., 3, 9, 2])"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.externals import joblib\n",
     "\n",
     "print(\"Starting application..\")\n",
+    "print(\"--------------------------------------\\n\")\n",
     "print(\"Loading pipeline..\")\n",
     "pipeline = joblib.load(\"pipeline.pkl\")\n",
     "print(\"pipeline successfully loaded\")\n",
     "\n",
     "import pandas as pd\n",
-    "test_df = pd.read_csv(\"../../Test.csv\")\n",
+    "test_df = pd.read_csv(\"./Production/Test.csv\") #Relative path from ../ as this program is called from there, change if running local\n",
     "\n",
     "X = test_df.iloc[:,:]\n",
     "\n",
-    "print(\"Running predictions\")\n",
-    "predictions = pipeline.predict(X)"
+    "print(\"Running predictions..\")\n",
+    "predictions = pipeline.predict(X)\n",
+    "print(\"Predictions made.\")"
    ]
   },
   {
@@ -56,14 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predictions saved as Results.csv\n"
+      "Predictions saved as Results.csv\n",
+      "b\"Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /root/.kaggle/kaggle.json'\\n\"\n",
+      "Predictions submitted to kaggle\n"
      ]
     }
    ],
@@ -76,7 +71,36 @@
     "data_to_submit = pd.DataFrame({'ImageId':ImageIds,\n",
     "                               'Label':predictions})\n",
     "data_to_submit.to_csv(\"Results.csv\", index = False)\n",
-    "print(\"Predictions saved as Results.csv\")"
+    "print(\"Predictions saved as Results.csv\")\n",
+    "\n",
+    "import subprocess\n",
+    "\n",
+    "command = \"kaggle competitions submit -c digit-recognizer -f ./Production/Results.csv -m \\\"XGBoost_with_scaling_amount_of_training_data\\\"\"\n",
+    "\n",
+    "#process = subprocess.Popen(command.split(), stdout=subprocess.PIPE)\n",
+    "#output, error = process.communicate()\n",
+    "print(output)\n",
+    "print(\"Predictions submitted to kaggle\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Use these commands after initiating docker to setup the tools required for kaggle api usage\n",
+    "#!pip install kaggle\n",
+    "#!cp ./kaggle.json /root/.kaggle/kaggle.json"
    ]
   },
   {
