--- a/Pipeline/Simulator.ipynb
+++ b/Pipeline/Simulator.ipynb
@@ -18,13 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "def splitData(Trainsize, Testsize):\n",
+    "    if (float(Trainsize) + Testsize) > 1:\n",
+    "        raise NameError('Trainsize + Testsize can not be bigger than 1!')\n",
     "    #Enter data\n",
     "    count = 42000\n",
     "    trainsize = Trainsize #As percentage. Example: 25% should be entered as 0.25\n",
@@ -37,9 +42,6 @@
     "\n",
     "    df = pd.read_csv(\"../Train.csv\")\n",
     "\n",
-    "    \n",
-    "    \n",
-    "    \n",
     "    test_df = df.iloc[count-testsize:,:]\n",
     "    train_df = df.iloc[:trainsize,:]\n",
     "\n",
@@ -57,8 +59,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -73,7 +77,7 @@
     "        if(os.system(\"python Deployer.py\") == 0):\n",
     "            print(\"Deployment succesfull.\")\n",
     "            print(\"Running application test\")\n",
-    "            os.system(\"python ./Production/Application.py\")\n",
+    "           #os.system(\"python ./Production/Application.py\")\n",
     "        else:\n",
     "            print(\"Deployment failed.\")\n",
     "    else:\n",
@@ -82,76 +86,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train size is 42\n",
+      "Train size is 2100\n",
       "Test size is 8400\n",
-      "Data has been split and saved as data.csv and test_data.csv\n",
-      "\n",
-      "Starting trainer\n",
-      "\n",
-      "Executing watcher\n",
-      "\n",
-      "Executing deployer\n",
-      "Deployment succesfull.\n",
-      "Running application test\n",
-      "Train size is 210\n",
-      "Test size is 8400\n",
-      "Data has been split and saved as data.csv and test_data.csv\n",
-      "\n",
-      "Starting trainer\n",
-      "\n",
-      "Executing watcher\n",
-      "\n",
-      "Executing deployer\n",
-      "Deployment succesfull.\n",
-      "Running application test\n",
-      "Train size is 378\n",
-      "Test size is 8400\n",
-      "Data has been split and saved as data.csv and test_data.csv\n",
-      "\n",
-      "Starting trainer\n",
-      "\n",
-      "Executing watcher\n",
-      "\n",
-      "Executing deployer\n",
-      "Deployment succesfull.\n",
-      "Running application test\n",
-      "Train size is 546\n",
-      "Test size is 8400\n",
-      "Data has been split and saved as data.csv and test_data.csv\n",
-      "\n",
-      "Starting trainer\n",
-      "\n",
-      "Executing watcher\n",
-      "\n",
-      "Executing deployer\n",
-      "Deployment succesfull.\n",
-      "Running application test\n",
-      "Train size is 714\n",
-      "Test size is 8400\n",
-      "Data has been split and saved as data.csv and test_data.csv\n",
-      "\n",
-      "Starting trainer\n",
-      "\n",
-      "Executing watcher\n",
-      "\n",
-      "Executing deployer\n",
-      "Deployment succesfull.\n",
-      "Running application test\n",
-      "Train size is 210\n",
-      "Test size is 8400\n",
-      "Data has been split and saved as data.csv and test_data.csv\n",
-      "\n",
-      "Starting trainer\n",
-      "\n",
-      "Executing watcher\n",
-      "Model did not pass the test, aborting.\n"
+      "Data has been split and saved as data.csv and test_data.csv\n"
      ]
     }
    ],
@@ -163,14 +107,26 @@
     "        i+=step\n",
     "    \n",
     "\n",
-    "for i in frange(0.001, 0.02, 0.004):\n",
-    "    splitData(i, 0.2)\n",
-    "    runPipeline()\n",
-    "    \n",
-    "#Run once more, the accuracy should decrease with the result that the model should not be deployed.\n",
-    "splitData(0.005, 0.2)\n",
-    "runPipeline()"
+    "#for i in frange(0.4, 0.8, 0.2):\n",
+    "#    splitData(i, 0.2)\n",
+    "#    runPipeline()\n",
+    "\n",
+    "splitData(0.05, 0.2)\n",
+    "#runPipeline()\n",
+    "\n",
+    "#Run once more for final performance without test set\n",
+    "#splitData(1, 0)\n",
+    "#runPipeline()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
